Basic tictactoe board

--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div id="header">Lets play Tic Tac Toe</div>
-    <div id="game">
-        <button id="start">Start Game</button>
+    <div id="header"><h1>Lets play Tic Tac Toe</h1></div>
+    <div id="grid">
+        <div id="row1">
+            <button id="11">X/O</button>
+            <button id="12">X/O</button>
+            <button id="13">X/O</button>
+        </div>
+        <div id="row2">
+            <button id="21">X/O</button>
+            <button id="22">X/O</button>
+            <button id="23">X/O</button>
+        </div>
+        <div id="row3">
+            <button id="31">X/O</button>
+            <button id="32">X/O</button>
+            <button id="33">X/O</button>
+        </div>
     </div>
+    <div id="game">
+        <button id="reset">Reset Game</button>
+    </div>
+    <script src="scripts.js"></script>  
 </body>
